--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
     <link rel="stylesheet" href="/src/index.css" />
-    <link id="theme-link" rel="stylesheet" href="/themes/lara-light-cyan/theme.css" />
+    <link
+      id="theme-link"
+      rel="stylesheet"
+      href="/themes/lara-light-cyan/theme.css"
+    />
   </head>
   <body>
-    <div id="root"></div>
+    <main id="root"></main>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
